modified name change to jpeg, updated spaghetti.html with recipe and picture

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,5 +7,31 @@
 
     <body>
         <a href="../index.html">Main Page</a>
+
+        <h1><img src="../images/Spaghetti.jpeg"></h1>
+        <h2>Description</h2>
+        <p>Spaghetti and Meatballs a classic and timeless dish over the centuries.</p>
+        <p>Following these simple steps you can make this amazing recipe for tonights dinner!</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Pasta</li>
+            <li>Tomato Sauce</li>
+            <li>Garlic and Onions</li>
+            <li>Ground Beef</li>
+            <li>Olive Oil</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil water and add in your pasta</li>
+            <li>Set aside a frying pan to medium heat</li>
+            <li>Toss in the garlic and onions until brown</li>
+            <li>Add in the ground beef until thoroughly cooked</li>
+            <li>Mix in your tomato sauce with the ground beef, onions and garlic</li>
+            <li>When the Pasta is about Al dente, it's time to mix in your Pasta with the Ground beef sauce</li>
+            <li>Enjoy!</li>
+        </ol>
+
     </body>
 </html>
