--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <body>
         <h1>Odin's Recipes</h1>
 
-        <a href="./recipes/spaghetti.html">Spaghetti Page</a>
+        <p>Welcome to Odin's receipes site! Where you can find all your recipes in one click</p>
+
+        <ol>
+            <li><a href="./recipes/spaghetti.html">Spaghetti Page</a></li>
+            <li></li>
+        </ol>
     </body>
 
 </html>
