--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
         <ol>
             <li><a href="./recipes/spaghetti.html">Spaghetti Page</a></li>
-            <li></li>
+            <li><a href="./recipes/steak.html">Steak Page</a></li>
+            <li><a href="./recipes/hamburger.html">Hamburger Page</a></li>
         </ol>
     </body>
 
