added stylessheet to index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="styles.css">
         <Title>Odin's Recipes</Title>
     </head>
 
@@ -15,6 +16,8 @@
             <li><a href="./recipes/steak.html">Steak Page</a></li>
             <li><a href="./recipes/hamburger.html">Hamburger Page</a></li>
         </ol>
+
+        
     </body>
 
 </html>
